--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@primevue/themes": "^4.2.5",
     "pinia": "^2.2.6",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
